removed some overflow(X) issues

--- a/src/sections/HomePageSection/ContactSection/ContactSection.style.scss
+++ b/src/sections/HomePageSection/ContactSection/ContactSection.style.scss
@@ -8,7 +8,6 @@
   &__info {
     margin-left: 20vw;
     margin-bottom: 5rem;
-    width: 80vw;
   }
   &__subtitle {
     color: var(--text-subtitle-color);
